--- a/serverless.yml
+++ b/serverless.yml
@@ -5,6 +5,7 @@ provider:
   runtime: nodejs6.10
   memorySize: 512 # max memory in MB
   timeout: 10
+  stage: prod
   region: us-east-1
 
 functions:
