--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "handler.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "serverless offline start"
+    "start": "serverless offline --port 3001 --skipCacheInvalidation start"
   },
   "keywords": [],
   "author": "",
