Elig type and agency update

--- a/serverless.yml
+++ b/serverless.yml
@@ -93,6 +93,13 @@ functions:
           path: agency
           method: delete
           cors: true
+  deleteEligibilityType:
+    handler: handler.deleteEligibilityType
+    events:
+      - http:
+          path: eligibilityType
+          method: delete
+          cors: true
   deleteCategory:
     handler: handler.deleteCategory
     events:
