Added deleteAgencyRequest and updated serverless.yml

--- a/serverless.yml
+++ b/serverless.yml
@@ -30,6 +30,13 @@ functions:
           path: agency
           method: post
           cors: true
+  createAgencyRequest:
+      handler: handler.createAgencyRequest
+      events:
+      - http:
+          path: agencyrequests
+          method: post
+          cors: true
   createCategory:
       handler: handler.createCategory
       events:
