--- a/serverless.yml
+++ b/serverless.yml
@@ -100,6 +100,13 @@ functions:
           path: agency
           method: delete
           cors: true
+  deleteAgencyRequest:
+    handler: handler.deleteAgencyRequest
+    events:
+      - http:
+          path: agencyrequests
+          method: delete
+          cors: true
   deleteEligibilityType:
     handler: handler.deleteEligibilityType
     events:
