--- a/serverless.yml
+++ b/serverless.yml
@@ -156,6 +156,20 @@ functions:
           path: county
           method: post
           cors: true
+  getHomePageInfo:
+      handler: handler.getHomePageInfo
+      events:
+      - http:
+          path: homepage
+          method: get
+          cors: true
+  updateHomePage:
+      handler: handler.updateHomePage
+      events:
+      - http:
+          path: homepage
+          method: post
+          cors: true
 
 plugins:
 - serverless-offline
