Fixed query to find first home page info instance

--- a/serverless.yml
+++ b/serverless.yml
@@ -168,7 +168,7 @@ functions:
       events:
       - http:
           path: homepage
-          method: post
+          method: put
           cors: true
 
 plugins:
